# Cate_Muse_Project

cate2-be/: .gitignore  pyproject.toml  requirements.txt
cate2-be/migrations/: env.py
cate2-be/migrations/versions/: a9fc17bd9f72_add_clients_and_proposals_tables.py  b93c8e602ddc_create_users_table.py
cate2-be/src/: __main__.py
cate2-be/src/auth/: config.py  dtos.py  permissions.py
cate2-be/src/auth/dependencies/: authentication.py  authorization.py  services.py
cate2-be/src/auth/services/: authorization.py  management.py  openid.py
cate2-be/src/clients/: endpoints.py  enums.py  models.py  schemas.py  services.py
cate2-be/src/common/services/: base.py  http.py
cate2-be/src/core/: app.py  config.py  dependencies.py
cate2-be/src/db/: config.py  dependencies.py
cate2-be/src/proposals/: endpoints.py  enums.py  models.py  schemas.py  services.py
cate2-be/src/users/: endpoints.py  enums.py  models.py  schemas.py  services.py  types.py
cate2-fe/: package-lock.json  package.json  repomix-output.xml  tsconfig.app.json  vite.config.ts
cate2-fe/src/: ProtectedRoute.tsx  Providers.tsx  main.css  main.tsx  theme.ts
cate2-fe/src/api/: config.ts  serializeQueryParams.ts
cate2-fe/src/components/: index.ts
cate2-fe/src/config/: muse.config.ts
cate2-fe/src/constants/: config.ts  routes.ts  sidebar.ts  statuses.ts
cate2-fe/src/mocks/: admin.mock.ts  dashboard.mock.ts  eventBriefs.mock.ts  museBoardResult.mock.ts  proposals.mock.ts  staffCalculator.mock.ts
cate2-fe/src/muse/: index.ts
cate2-fe/src/routes/: MuseRoutes.tsx  routeConfig.ts
(+211 files in other folders)
