[project]
name = "cate2-be"
version = "0.1.0"
description = "CATE 2.0 backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.139.0",
    "uvicorn[standard]==0.49.0",
    "sqlalchemy[asyncio]==2.0.51",
    "asyncpg==0.31.0",
    "alembic==1.18.5",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "pyjwt==2.13.0",
    "cryptography==49.0.0",
    "httpx==0.28.1",
    "structlog==26.1.0",
    "python-dotenv==1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.uv]
package = false